# terragora

./: .dockerignore  .gitignore  BotServerDockerfile  Cargo.toml  Dockerfile  Dockerignore  HTMXDockerfile  PipelineDockerfile  PublisherDockerfile  README.MD  README.md  ScraperDockerfile  StreamlitDockerfile  app.py  dockerfile  dockerignore  go.mod  go.sum  logger.py  requirements.txt  streamlit_requirements.txt  test.py  test_2.py  test_3.py  test_read.py  text.txt
.sqlx/: query-8a5bf393ce6c78582b1b521dba2be162123bb667760b94fc0a185602b34c91fe.json  query-8ba8b0508dd0d3003c6d90c467d6dfacbcfea73c03e8e431ee7ea67f9d4d3219.json  query-92b6c1a2769d41feff3aca8da15c964af15e96a755201914122ca66a79dc51ce.json  query-ea58ca076d12d69526c21e2aaf2b298d17c32622d85cc97608137c5dc5bf75ec.json  query-fc51716b93256f43122b018702c7583f34c016da4ad9a40e410d28189c75f902.json
api/: api.py  requirements.txt  webhook.py
api/services/: config.py  llm.py  logging.py  messages.py  (+3 more)
app/: main.py
data/: config.yaml  prompts.md  prompts.yaml  test.json
extraction/: app.py  dummy_posts.json  dummy_resume.json  requirements.txt  test.py
migrations/: 01_extensions.sql  02_functions.sql  04_indexes.sql  05_triggers.sql
process/: app.py  requirements.txt  test.py  test_2.py  test_3.py
routers/: account.py  agendas.py  collect.py  cookies.py  label.py  legacy.py  profiles.py  rules.py  send.py  submissions.py
scheduler/: actions.py  engine.py  models.py  test_actions.py  utils.py
scripts/: receiver.py
src/: config.rs  main.rs  models.rs
static/: styles.css
streamlit/: app.py  logger.py
(+173 files in other folders)
