[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "hickory-dns", "rustls"] }
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Serialization & Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.9", features = ["serde", "v4"] }
fake_user_agent = "0.2.3"
rand = "0.10.0"
urlencoding = "2.1.3"
anyhow = "1.0.102"
